# LearnOpenGL

./: .gitignore  LICENSE  README.md
src/C0/glad/include/glad/: glad.h
src/C1_Getting_Started/: 04A1_Hello_Triangle.cpp  04_Hello_Triangle.cpp  CMakeLists.txt  hello_triangle.cpp  hello_window.cpp
src/C1_Getting_Started/03_Hello_Window/: CMakeLists.txt
src/C1_Getting_Started/04_Hello_Triangle/: CMakeLists.txt  Hello_Triangle.cpp
src/C1_Getting_Started/05_Shaders/: CMakeLists.txt  Hello_Shader.cpp
src/C1_Getting_Started/05_Shaders/shader_files/: shader.fs  shader.vs
src/C1_Getting_Started/06_Textures/: CMakeLists.txt  Hello_Textures.cpp  Shader.cpp
src/C1_Getting_Started/06_Textures/shader_files/: shader.fs
src/C1_Getting_Started/07_Transformations/: CMakeLists.txt  CmakeLists.txt  Shader.h  Transformations.cpp
src/C1_Getting_Started/08_Coordinate/: CMakeLists.txt  Coordinate.cpp  main
src/C1_Getting_Started/09_Camera/: CMakeLists.txt  ChapterCamera.cpp  CmakeLists.txt  Shader.h
src/C1_Getting_Started/09_Camera/shader_files/: shader.fs
src/C1_Getting_Started/glfw_start/: glfw_start.aps  glfw_start.sln  glfw_start.vcxproj  resource.h
src/C1_Getting_Started/glfw_start/src/: main.cpp
src/C1_Getting_Started/glfw_start/x64/Debug/: glfw_start.exe.recipe  glfw_start.ilk  glfw_start.vcxproj.FileListAbsolute.txt  vc143.idb
src/C1_Getting_Started/glfw_start/x64/Debug/glfw_start.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  glfw_start.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/C1_Getting_Started/glfw_start_wsl/: CMakeLists.txt  glad.c  hello_triangle.cpp  main.cpp
src/C2_Lighting/: .clang-format  CMakeLists.txt
src/C2_Lighting/01_Colors/: CMakeLists.txt  Camera.cpp  Camera.h  Colors.cpp  Shader.cpp  Shader.h  utils.h
src/C2_Lighting/01_Colors/shader_files/: shader.fs
src/C2_Lighting/02_Basic_Lighting/: CMakeLists.txt  Shader.cpp  main.cpp
src/C2_Lighting/02_Basic_Lighting/cube_shader/: shader.fs
src/C2_Lighting/03_Materials/: CMakeLists.txt  Camera.cpp  Shader.h  main.cpp
src/C2_Lighting/03_Materials/cube_shader/: shader.fs
src/C2_Lighting/04_Lighting_Maps/: CMakeLists.txt
src/C2_Lighting/05_Light_Casters/: CMakeLists.txt  main.cpp
src/C2_Lighting/05_Light_Casters/cube_shader/: shader.fs
src/C2_Lighting/06_Multiple_Lights/: CMakeLists.txt  main.cpp
src/C2_Lighting/06_Multiple_Lights/cube_shader/: shader.fs
